--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
+    "react-transition-group": "1.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "scroll-to-element": "^2.0.0",
