--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "^5.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
